--- a/package.json
+++ b/package.json
@@ -1,6 +1,54 @@
 {
-  "dependencies": {
-    "@rnv/template-starter": "1.0.0-rc.9",
-    "rnv": "1.0.0-rc.9"
-  }
+    "scripts": {
+        "start": "npx rnv run --platform web --port 8091"
+    },
+    "devDependencies": {
+        "@flexn/assets-renative-outline": "0.3.3",
+        "@flexn/typescript-config": "1.0.0",
+        "@rnv/engine-rn-next": "1.0.0-rc.9",
+        "@rnv/template-starter": "1.0.0-rc.9",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "18.2.6",
+        "@types/react-native": "0.72.3",
+        "babel-loader": "9.1.3",
+        "buffer": "^6.0.3",
+        "console-browserify": "^1.2.0",
+        "crypto-browserify": "^3.12.0",
+        "https-browserify": "^1.0.0",
+        "process": "^0.11.10",
+        "rnv": "1.0.0-rc.9",
+        "stream-browserify": "^3.0.0",
+        "typescript": "4.9.5",
+        "util": "^0.12.5"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "resolutions": {
+        "@babel/traverse": "7.15.0",
+        "@types/react": "18.2.6"
+    },
+    "name": "rnv-next.js-webpack-1.0.0-rc.9",
+    "version": "0.1.0",
+    "dependencies": {
+        "@rnv/renative": "1.0.0-rc.9",
+        "@sap-cloud-sdk/connectivity": "^3.11.0",
+        "next": "14.0.4",
+        "react": "18.2.0",
+        "react-art": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.72.4",
+        "react-native-gesture-handler": "2.13.1",
+        "react-native-tvos": "0.72.4-0",
+        "react-native-web": "0.19.9"
+    }
 }
